[metadata]
name = lla
version = attr: lla.__version__
author = Ellen Marie Dash
author_email = me@duckie.co
description = A program to help build, maintain, and release PEP 517-compliant projects.
long_description = file: README.md
long_description_content_type=text/markdown
url = https://github.com/duckinator/lla
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
include_package_data = False
packages = find:
python_requires = >=3.6

install_requires =


tests_require =
    lla[testing]

[options.extras_require]
testing =
    bork==5.0.0
    pylint==2.5.3
    pytest==6.0.1
    pytest-pylint==0.17.0
    pytest-mypy==0.6.2

[options.entry_points]
#console_scripts =
#    ll = lla.cli:main
